preview height width too small  problem fixed

--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,10 @@ body{
 .modal-content {
   margin: auto;
   display: block;
-  width: 95%;
-  max-width: 30%;
-  max-height: 81vh;
+  width: 500px;
+  max-width: 60%;
+  height: 900px;
+  max-height: 90vh;
   border-radius: 20px;
 }
 
@@ -32,7 +33,7 @@ body{
   position: absolute;
   top: 50px;
   right: 50%;
-  color: rgb(253, 0, 0);
+  color: rgb(74, 255, 3);
   font-size: 50px;
   font-weight: bold;
   cursor: pointer;
@@ -166,4 +167,17 @@ progress {
       box-shadow: 0 0 3px -1px black;
       box-shadow: 0 0 5px -1px rgb(231, 11, 11);
     }
+
+    .modal-content {
+      bottom: 50px;
+      width: 83vw;
+      height: 70vh;
+      max-height: 100vh;
+      max-width: 95vh;
+    }
+    .close {
+      top: 45px;
+      transform: scale(1.1);
+    }
+
   }
